<resources>
    <string name="app_name">MyBudget</string>
    <string name="title_home">Budgets</string>
    <string name="title_graphics">Graphics</string>
    <string name="title_notifications">Notifications</string>


    <!--https://code.tutsplus.com/es/tutorials/how-to-add-a-dropdown-menu-in-android-studio//DOBLE GUION AQUI//-cms-37860-->
    <string-array name="sort_by">
        <item>Date (newest first)</item>
        <item>Date (oldest first)</item>
        <item>Negative</item>
        <item>Positive</item>
        <item>Received</item>
        <item>Paid</item>
        <item>Withheld</item>
        <item>Pending</item>
    </string-array>

    <string-array name="transaction_status_value">
        <item>WITHHELD</item>
        <item>PAID</item>
        <item>RECEIVED</item>
        <item>OUTSTANDING</item>
        <item>RECEIVE PENDING</item>
    </string-array>

    <string-array name="budget_colors_name">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Pink</item>
        <item>White</item>
    </string-array>

    <string name="title_activity_transaction_list">TransactionListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="transaction_status_text">Status:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="budget_name_hint">Budget name</string>
    <string name="budget_description_hint">Budget description</string>
    <!--Safeargs-->
    <string name="budgetId">budgetId</string>
    <string name="transactionId">transactionId</string>
</resources>